--- a/src/components/Disperse.css
+++ b/src/components/Disperse.css
@@ -63,3 +63,9 @@
 .next-btn-submit {
   background-color: #6e42bf;
 }
+
+.text-area{
+  width: 100%;
+  height: 150px;
+  background-color: rgb(245, 244, 248);;
+}
